Fix caching: network-first SW, add distance diagnostic, version indicator v4

--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
 
   <footer class="app-footer">
     <p>Your data stays on your device. Nothing is uploaded to any server.</p>
+    <p style="opacity:0.3;font-size:0.65rem;">v4</p>
   </footer>
 
   <!-- Libraries (CDN, cached by service worker) -->
