--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
         <button class="time-btn" data-range="mtd">Month</button>
         <button class="time-btn" data-range="6mo">6 Months</button>
         <button class="time-btn" data-range="ytd">YTD</button>
+        <button class="time-btn" data-range="2025">2025</button>
+        <button class="time-btn" data-range="2024">2024</button>
         <button class="time-btn active" data-range="all">All</button>
       </nav>
 
@@ -87,10 +89,22 @@
         <div id="personal-records" class="pr-grid"></div>
       </section>
 
+      <!-- Milestone Badges -->
+      <section class="card">
+        <h3 class="section-title">Lifetime Milestones</h3>
+        <div id="milestones" class="milestones-shelf"></div>
+      </section>
+
       <!-- Goals & Awards -->
       <section class="card goals-section">
         <h3 class="section-title">2026 Goals</h3>
         <div class="goals-grid" id="goals-grid"></div>
+      </section>
+
+      <!-- Monthly Report Card -->
+      <section class="card">
+        <h3 class="section-title">Monthly Report Card</h3>
+        <div id="report-card" class="report-card-grid"></div>
       </section>
 
       <!-- Tab Navigation -->
@@ -101,6 +115,7 @@
         <button class="tab-btn" data-tab="calories">Calories</button>
         <button class="tab-btn" data-tab="consistency">Consistency</button>
         <button class="tab-btn" data-tab="perrun">Per-Run</button>
+        <button class="tab-btn" data-tab="recovery">Recovery</button>
       </nav>
 
       <!-- Tab Content -->
@@ -140,6 +155,9 @@
           </div>
           <div class="chart-container chart-wide">
             <canvas id="chart-cumulative"></canvas>
+          </div>
+          <div class="chart-container chart-wide">
+            <canvas id="chart-yoy"></canvas>
           </div>
         </div>
 
@@ -191,11 +209,27 @@
             </div>
           </div>
         </div>
+
+        <!-- Recovery Tab -->
+        <div id="tab-recovery" class="tab-content">
+          <div class="chart-grid">
+            <div class="chart-container">
+              <canvas id="chart-recovery-scatter"></canvas>
+            </div>
+            <div class="chart-container">
+              <canvas id="chart-recovery-bars"></canvas>
+            </div>
+          </div>
+        </div>
       </div>
 
       <!-- Run Table -->
       <section class="card table-section">
         <h3 class="section-title">All Runs</h3>
+        <div id="detailed-hr-controls" class="detailed-hr-bar">
+          <button id="btn-load-detailed" class="btn-detailed-hr">Load Detailed HR Data</button>
+          <span id="detailed-hr-status" class="detailed-hr-status"></span>
+        </div>
         <div class="table-wrapper">
           <table id="run-table">
             <thead>
@@ -208,6 +242,7 @@
                 <th data-sort="maxHR">Max HR</th>
                 <th data-sort="calories">Calories</th>
                 <th data-sort="cadence">Cadence</th>
+                <th data-sort="score">Score</th>
                 <th>Type</th>
               </tr>
             </thead>
@@ -216,12 +251,20 @@
         </div>
       </section>
 
+      <!-- Run Detail Modal -->
+      <div id="run-detail-overlay" class="run-detail-overlay hidden">
+        <div class="run-detail-panel">
+          <button id="run-detail-close" class="run-detail-close">&times;</button>
+          <div id="run-detail-content"></div>
+        </div>
+      </div>
+
     </div>
   </main>
 
   <footer class="app-footer">
     <p>Your data stays on your device. Nothing is uploaded to any server.</p>
-    <p style="opacity:0.3;font-size:0.65rem;">v5</p>
+    <p style="opacity:0.3;font-size:0.65rem;">v6</p>
   </footer>
 
   <!-- Libraries (CDN, cached by service worker) -->
